# exercises

./: compress_word.cpp  deep_coppy.cpp  minimum_value  minimum_value.cpp  modifiedBinarySearch.cpp  password_generator.cpp  sum_implementation_template.cpp
binary_tree/: main.cpp
complexity_of_calculations/vector_vs_list_put/: main.cpp
math_expression_test/: CMakeLists.txt  mathExpression.cpp  mathExpression.hpp  test.cpp
my_string/: MyString.cpp
my_vector/: CMakeLists.txt  test.cpp  vector_v2.cpp  vector_v2.hpp
parseQuantity/: CMakeLists.txt  parseQuantity.cpp  parseQuantity.hpp  test.cpp
remove_function/: CMakeLists.txt  remove.cpp  remove.hpp  test.cpp
reverse/: main.cpp
sort_even_numbers/: sort_even_numbers.cpp
substring_search/: CMakeLists.txt  substring_search.cpp  substring_search.hpp  test.cpp
